UIP-1223, UIP-1235, UIP-1241 --> MultiDrag causes alignment issues; MultiDrag: Disable re-ordering of left column items; MultiDrag: columns with icon overlap label

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -2051,6 +2051,9 @@ input[type=file] {
     .input-color-picker {
         margin-bottom: 0;
     }
+    .row-selector {
+        margin-bottom: 50px;
+    }
 }
 
 .checkbox-list {
