--- a/packages/ui-library/src/css/row-selector.scss
+++ b/packages/ui-library/src/css/row-selector.scss
@@ -10,6 +10,13 @@
             @include user-select(none);
         }
     }
+    .disable-sort {
+        .drag-drop-item {
+            .icon-grip {
+                @include opacity(0.4);    
+            }
+        }
+    }
     .column-title {
         font-size: 15px;
         color: $color-slate;
@@ -104,7 +111,7 @@
         }
         &.item-decoration {
             .name {
-                margin-left: 40px;
+                margin-left: 65px;
             }
         }
         .item-image {
